# teleoperacion_robotica_gestos

./: CMakeLists.txt  README.md  package.xml
launch/: blue_navigation.launch  config.rviz  gazebo_world.launch  load_scene.launch  load_scene.launchZone.Identifier
models/object/: model.sdf
models/realsense/: model.urdf
scripts/: blue_navigation.py  capture_video.py  move_robot_arm.py  object_localization.py  obstacle_avoidance.py  obstacle_detection.py  pose_estimation.py  show_camera_robot.py  show_camera_robot.pyZone.Identifier
